--- a/project/Makefile
+++ b/project/Makefile
@@ -90,6 +90,7 @@ CSRC = $(PORTSRC) \
        $(BOARDSRC) \
        $(CHIBIOS)/os/various/evtimer.c \
        $(CHIBIOS)/os/various/syscalls.c \
+       $(C_FILES)/exti.c \
        $(C_FILES)/main.c
 
 # C++ sources that can be compiled in ARM or THUMB mode depending on the global
