Control of laser by serial

--- a/project/Makefile
+++ b/project/Makefile
@@ -5,7 +5,7 @@
 
 # Compiler options here.
 ifeq ($(USE_OPT),)
-  USE_OPT = -O2 -ggdb -fomit-frame-pointer -falign-functions=16
+  USE_OPT = -O2 -ggdb -fomit-frame-pointer -falign-functions=16 -std=gnu99
 endif
 
 # C specific options here (added to USE_OPT).
@@ -92,6 +92,7 @@ CSRC = $(PORTSRC) \
        $(CHIBIOS)/os/various/syscalls.c \
        $(CHIBIOS)/os/various/chprintf.c \
        $(C_FILES)/exti.c \
+       $(C_FILES)/trace.c \
        $(C_FILES)/k12n.c \
        $(C_FILES)/dac.c \
        $(C_FILES)/main.c
